# pyologger

./: .gitignore  CONTRIBUTING.md  Finescale-HR.code-workspace  README.md  Snakefile  channel_mapping.json  color_mappings.json  color_previews.css  deployment_config_log.json  montage_log copy.json  montage_log.json  pyproject.toml  requirements.txt  sensor_mapping.json
MATLAB/PenguinStrokeDetector/: d3audit_RECOVER.mat  saveaudit.m
R/: read_ube.R
assets/: diveDB_logo.ai
dash/: color_mapping.json  data_visualization.py  data_visualization_local.py  graph_utils.py  plot_and_truncate.py
dash/assets/: PenguinSwim.fbx
dash/three_js_orientation/: DESCRIPTION  MANIFEST.in  NAMESPACE  Project.toml  README.md  _validate_init.py  index.html  package-lock.json  package.json  usage.py  webpack.config.js
dash/video_preview/: DESCRIPTION  MANIFEST.in  NAMESPACE  Project.toml  README.md  _validate_init.py  data_vis.py  index.html  package-lock.json  package.json  usage.py  webpack.config.js
djangodb/: settings.py  urls.py
docs/source/: conf.py  examples.rst  index.rst  intro.rst  modules.rst  pyologger.interactive_pyologger.rst  pyologger.interactive_pyologger.utils.rst  pyologger.load_data.rst  pyologger.plot_data.rst  pyologger.process_data.rst  pyologger.rst  pyologger.utils.rst
finescale_hr/notebooks/: 01-load-data.ipynb
home/: urls.py
notebooks/: 00_compare_data_pickles.ipynb  00_data_to_diveDB.ipynb  00_load_data.ipynb  00_manage_montages.ipynb  00_misc.ipynb  01_calibrate_pressure.ipynb  02_calibrate_accmag.ipynb  03_tag2animal.ipynb  04_stroke_detect.ipynb  05_heartbeat_detect.ipynb  05_viz_data.ipynb  06_heartbeat_detect.ipynb  06_viz_data.ipynb  07_processed_data_exploration.ipynb  0x_using_DiveDB.ipynb  load_data_01.ipynb  xx_SANDBOX.ipynb  xx_divedb_data_querying.ipynb  xx_divedb_data_upload.ipynb
notes/: admin.py  urls.py  views.py
pyologger/: FinescaleHR.Rmd  __init__.py
pyologger.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyologger/analyze_data/: analyze_segments.py  find_segments.py
pyologger/calibrate_data/: calibrate_acc_mag.py  prh_predictor.py  tag2animal.py  zoc.py
pyologger/interactive_pyologger/: app.py
pyologger/io_operations/: base_exporter.py  (+9 more)
scripts/: FinescaleHR.ipynb  Untitled0.ipynb
src/: 00_ArterialSaturationPlots.ipynb  00_PenguinSaturations_A-and-B.Rmd
workflows/: 00_backup_data.py  00_load_data.py  01_calibrate_pressure.py  02_calibrate_accmag.py  03_tag2animal.py  04_stroke_detect.py  05_heartbeat_detect.py  06_export_data.py
(+70 files in other folders)
