[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=8.0",
  "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "pyologger"
description = "Tools for analyzing biologging data in Python."
requires-python = ">=3.8" # specifying minimum and maximum python versions
version = "0.1.0"
authors = [
  { name = "Jessica Kendall-Bar", email = "jkendallbar@ucsd.edu" },
]
dependencies = [
  "numpy",
  "pandas",
  "mne",
  "pytz",
  "python-dotenv",
  "notion-client",
  "plotly",
  "nbformat",
]

[tool_setuptools.packages.find] # finds submodules
packages = "pyologger"
exclude = ["media", "docs", "notebooks"]